--- a/clusters/full-profile/cluster-config/dependant-resources/overlays/grype-airgapped.yaml
+++ b/clusters/full-profile/cluster-config/dependant-resources/overlays/grype-airgapped.yaml
@@ -21,7 +21,14 @@ stringData:
                 value: "false"
               - name: GRYPE_DB_MAX_ALLOWED_BUILT_AGE
                 value: "720h"
+              - name: GRYPE_DB_AUTO_UPDATE
+                value: "false"
+              - name: GRYPE_DB_UPDATE_URL
+                value: http://10.54.243.82:9000/grype2/databases/listing.json
+              - name: GRYPE_DB_VALIDATE_AGE
+                value: "false"
 ---
+
 apiVersion: v1
 kind: Secret
 metadata:
