--- a/clusters/full-profile/cluster-config/values/tap-values.yaml
+++ b/clusters/full-profile/cluster-config/values/tap-values.yaml
@@ -59,6 +59,7 @@ tap_install:
           url: https://nexus-80.aws.samarsinghal.com/repository/maven-central/
           secret_name: maven-credentials
     ootb_supply_chain_testing:
+      external_delivery: true
       registry:
         server: harbor.aws.samarsinghal.com
         repository: tap-152/supplychain
