--- a/clusters/full-profile/cluster-config/dependant-resources/tools/multi-delivery-pipeline.yaml
+++ b/clusters/full-profile/cluster-config/dependant-resources/tools/multi-delivery-pipeline.yaml
@@ -235,14 +235,12 @@ spec:
           -----END CERTIFICATE-----
         repository: tap-152/supplychain
         server: harbor.aws.samarsinghal.com
-    - default: go-git
-      name: gitImplementation
     templateRef:
       kind: ClusterTemplate
       name: multi-deliverable-template
   selector:
     apps.tanzu.vmware.com/has-tests: "true"
-    apps.tanzu.vmware.com/workload-type: delivery
+    apps.tanzu.vmware.com/delivery-type: multi
 ---
 apiVersion: carto.run/v1alpha1
 kind: ClusterTemplate
