--- a/clusters/full-profile/cluster-config/dependant-resources/tools/multi-delivery-pipeline.yaml
+++ b/clusters/full-profile/cluster-config/dependant-resources/tools/multi-delivery-pipeline.yaml
@@ -242,7 +242,7 @@ spec:
       name: multi-deliverable-template
   selector:
     apps.tanzu.vmware.com/has-tests: "true"
-    apps.tanzu.vmware.com/multi-delivery: "true"
+    apps.tanzu.vmware.com/workload-type: multi-delivery
 ---
 apiVersion: carto.run/v1alpha1
 kind: ClusterTemplate
